added pr review comments
added open in browser for commits,prs & issues plus added repo name in single notifications